# GeoJSON2XML

./: GeoJSON2XML.ipynb  README.md  pyproject.toml
base/: GeoJSON2XML_VM.py  __init__.py
